apps/paperless-ngx/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless-ngx"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "paperless-ngx"
    gethomepage.dev/description: "Document Manager"
    gethomepage.dev/href: "https://docs.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docs.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: paperless-ngx
          namespace: paperless-ngx
          port: 8000
  tls:
    secretName: production-cyphers-app-tls
